--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5680,6 +5680,10 @@ a.text-theme:hover,
   border-radius: 20px;
   position: relative;
 }
+.media-img a img{
+  width: 100px;
+  height: 90px;
+}
 
 .recent-post .media-img img {
   width: 100%;
@@ -11329,6 +11333,7 @@ table.woocommerce-product-attributes {
 
 .th-product .product-img img {
   width: 100%;
+  height: 12rem;
   -webkit-transition: all ease 0.4s;
   transition: all ease 0.4s;
   -webkit-transform: scale(1);
@@ -14213,6 +14218,8 @@ span.select2-selection.select2-selection--single:focus {
   position: absolute;
   top: 22px;
   left: 22px;
+  width: 50px;
+  object-fit: cover;
 }
 
 .team-card .team-img {
@@ -18201,8 +18208,15 @@ span.select2-selection.select2-selection--single:focus {
 
 .cta-area-1 .cta-wrap-bg .cta-thumb {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -38%;
+  bottom: 30%;
+  width: 80%;
+}
+.cta-thumb img {
+  width: 50%;
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
 }
 
 .cta-area-1 .cta-wrap {
@@ -18410,6 +18424,9 @@ span.select2-selection.select2-selection--single:focus {
 .client-card img {
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  width: 98px;
+  height: 120px;
+  object-fit: cover;
 }
 
 .client-card:hover img {
